@@ -1,5 +1,10 @@
 1999-10-17  Havoc Pennington  <hp@pobox.com>
 
+	* backends/xml-backend.c: Use %gconf.xml instead of .gconf.xml 
+	for the magic files.
+
+1999-10-17  Havoc Pennington  <hp@pobox.com>
+
 	* tests/runtests.sh: Make this script work
 
 	* gconf/gconftool.c: Don't use -s for --spawn, since it's used for
